--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="hello_blank_fragment">Hello_blank_fragment</string>
     <string name="title_hint">Title</string>
     <string name="description_hint">Description</string>
+    <string name="new_list_name">New list name</string>
+    <string name="list_name">List name</string>
 </resources>
