--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="description_hint">Description</string>
     <string name="new_list_name">New list name</string>
     <string name="list_name">List name</string>
+    <string name="shop_list_fragment">Shop list fragment</string>
+    <string name="create_list">Create list</string>
 </resources>
