--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="settings">Settings</string>
     <string name="notes">Notes</string>
     <string name="shop_list">Shop list</string>
-    <string name="new_item">New</string>
+    <string name="new_item">New item</string>
 
     <string name="hello_blank_fragment">Hello_blank_fragment</string>
     <string name="title_hint">Title</string>
@@ -14,8 +14,12 @@
     <string name="list_name">List name</string>
     <string name="shop_list_fragment">Shop list fragment</string>
     <string name="create_list">Create list</string>
-    <string name="delete_alert">DELETE</string>
+    <string name="delete_alert">Delete</string>
     <string name="delete_item">Do you want to delete this item?</string>
     <string name="delete_button">Delete</string>
     <string name="cancel_button">Cancel</string>
+    <string name="delete_list">Delete list</string>
+    <string name="clear_list">Clear list</string>
+    <string name="share_list">Share list</string>
+    <string name="save_item">Save item</string>
 </resources>
