--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,7 @@
     <string name="note_text_settings">Note text settings</string>
     <string name="choose_text_size">Choose text size</string>
     <string name="choose_content_text_size">Choose content text size</string>
+    <string name="settings_title">Settings</string>
+    <string name="note_list_title">Note List</string>
+    <string name="shop_list_title">Shop List</string>
 </resources>
